--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <p>
-      We are a new political movement within the United Kingdom, headquartered in Wales, advocating for a break-up of the Union,
+      We are a new political movement within the United Kingdom, headquartered in Wales, advocating for a break-up of the UK,
       and for maximum regional autonomy under a socialist confederacy. We advocate a model of governance modeled partially on 
       the Swiss system, and for continued membership of the European Union, to promote values of egalitarian brotherhood, and
       to ensure the continuing rights of free movement and association between member states and its citizens.
